exports[`test should render a default component 1`] = `
<div
  data-terra-clincial-detail-list="true">
  <div
    class="list" />
</div>
`;

exports[`test should render a list 1`] = `
<div
  data-terra-clincial-detail-list="true">
  <div
    class="list">
    <div
      class="detail-list-item">
      <p>
        Test
      </p>
    </div>
    <div
      class="detail-list-item">
      <p>
        Test
      </p>
    </div>
  </div>
</div>
`;

exports[`test should render a title 1`] = `
<div
  data-terra-clincial-detail-list="true">
  <div
    class="title">
    Title
  </div>
  <div
    class="list" />
</div>
`;

exports[`test should render a title and a list 1`] = `
<div
  data-terra-clincial-detail-list="true">
  <div
    class="title">
    Title
  </div>
  <div
    class="list">
    <div
      class="detail-list-item">
      <p>
        Test
      </p>
    </div>
  </div>
</div>
`;
